--- a/options.html
+++ b/options.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="options.js"></script>
     <style>
       button {
         height: 30px;
@@ -11,8 +12,14 @@
     </style>
   </head>
   <body>
-    <div id="buttonDiv">
+    <div id="accountDiv">
+      <h4> Account Settings </h4>
+      <p id="current_username">Your venmo account is set as: </p>
     </div>
+    <form id="set_username"> Your Venmo Username:  
+      <input type="text" name="user_input" id = "username">
+      <br><br>
+      <input type="button" value = "submit" id ="venmo_submit_button">
+    </form>
   </body>
-  <script src="options.js"></script>
 </html>
