changed to paypal

--- a/options.html
+++ b/options.html
@@ -14,12 +14,12 @@
   <body>
     <div id="accountDiv">
       <h4> Account Settings </h4>
-      <p id="current_username">Your venmo account is set as: </p>
+      <p id="current_username">Your PayPal account is set as: </p>
     </div>
-    <form id="set_username"> Your Venmo Username:  
+    <form id="set_username"> Enter your PayPal username:  
       <input type="text" name="user_input" id = "username">
       <br><br>
-      <input type="button" value = "submit" id ="venmo_submit_button">
+      <input type="button" value = "submit" id ="user_submit_button">
     </form>
   </body>
 </html>
