--- a/swearingisbad.html
+++ b/swearingisbad.html
@@ -11,9 +11,10 @@
 <body>
 <h1 class = "text-center"> uh oh! your swear jar is full! </h1> 
 
-<script src="https://www.paypalobjects.com/api/checkout.js"></script>
+	<script src="https://www.paypalobjects.com/api/checkout.js"></script>
     <div id="paypal-button-container"></div>
-    <script>
+    <script src="payment.js"></script>
+    <!-- <script>
         var swears = chrome.storage.sync.get(['num_swears'], function(result) {
           var newValue = result.num_swears;
           console.log(newValue);
@@ -76,7 +77,7 @@
 
         }, '#paypal-button-container');
 
-    </script>
+    </script> -->
 </body>
 
 </html>
