--- a/swearingisbad.html
+++ b/swearingisbad.html
@@ -13,7 +13,10 @@
     <div style="text-align: center; margin: auto;">
         <h1 id="jar-message" class="text-center"> Your swear jar still has a bit of space left. For now...</h1> 
         <img id="jar-image" src="images/jar-empty.jpg">
-    	<script src="https://www.paypalobjects.com/api/checkout.js"></script>
+        <h2 id="soap-message-1"></h2>
+        <h3 id="soap-message-2"></h3>
+        <h3 id="soap-message-3"></h3>
+        <script src="https://www.paypalobjects.com/api/checkout.js"></script>
         <div id="paypal-button-container"></div>
         <script src="emptiness.js"></script>
         <script src="payment.js"></script>
