added cost on swearingisbad page

--- a/swearingisbad.html
+++ b/swearingisbad.html
@@ -16,6 +16,8 @@
         <h2 id="soap-message-1"></h2>
         <h3 id="soap-message-2"></h3>
         <h3 id="soap-message-3"></h3>
+        <br>
+        <h2 id="cost-message"></h2>
         <script src="https://www.paypalobjects.com/api/checkout.js"></script>
         <div id="paypal-button-container"></div>
         <script src="emptiness.js"></script>
